--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.side-menu-items {
+  height: 100%;
+  width: 75%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  background-color: #333333;
+}
+
+.closed-side-menu {
+  width: 0;
+  position: absolute;
+  top: 0;
+  right: 25px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 1rem !important;
+  color: #fff;
+  font-weight: bold;
+  margin: 15px 0 15px 20px;
+}
+
+.header {
+  height: 80px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header-icon {
+  position: absolute;
+  margin-left: 75%;
+  padding-left: 20px;
+  left: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.page-content {
+  margin-left: 75%;
+  overflow-x: hidden;
+}
+
+.closed {
+  margin-left: 0 !important;
+}
+
+@media screen and (min-width: 321px) {
+  .header-icon {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+
+  .side-menu-items {
+    flex-direction: row;
+    position: relative;
+    height: fit-content;
+    width: 100%;
+    background-color: transparent;
+  }
+
+  a {
+    margin: 30px 40px 0 40px;
+    font-weight: normal;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .header-logo {
+    margin-top: 25px;
   }
 }
