--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   background-color: rgb(226, 32, 32, 0.8);
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
