--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,99 @@
 .app {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 50px;
+  height: fit-content;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
-.buttons {
+.sections-mobile {
+  background-color: #333333;
+  height: 100vh;
+  min-width: 75%;
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.sections-web a,
+.sections-mobile a {
+  margin: 10px 0 10px 30px;
+  text-decoration: none;
+  color: #dddddd;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.sections-mobile-closed {
+  display: none;
+}
+
+.sections-web {
+  display: none;
+}
+
+.body-content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  margin: 20px 10px;
+}
+
+.header {
+  width: 100%;
+  min-height: 60px;
   display: flex;
   align-items: center;
+}
+
+.hamburguer-container {
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-container {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hamburguer-menu {
+  cursor: pointer;
+}
+
+@media screen and (min-width: 500px) {
+  .hamburguer-menu {
+    display: none;
+  }
+
+  .app {
+    flex-direction: column;
+  }
+
+  .sections-mobile {
+    display: none !important;
+  }
+
+  .sections-web {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100px;
+  }
+
+  .logo-container {
+    width: 100% !important;
+  }
+
+  .hamburguer-container {
+    width: 0% !important;
+  }
+
+  .body-content {
+    margin: 20px 0;
+  }
 }
