--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,4 +1,19 @@
 .buttons {
   display: flex;
   align-items: center;
+  margin: 20px 0;
+  overflow-x: hidden;
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 500px) {
+  .buttons {
+    margin: 50px 0;
+  }
 }
