--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -15,7 +15,10 @@
 }
 
 .layer {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.15), rgba(97, 97, 97, 0.8));
+  background-image: linear-gradient(
+    rgba(255, 255, 255, 0.25),
+    rgba(59, 59, 59, 1)
+  );
   border-radius: 5px;
   position: absolute;
   z-index: 0;
@@ -23,9 +26,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-}
-
-@media screen and (max-width: 500px) {
 }
 
 .card-title {
@@ -41,12 +41,16 @@
   padding: 0 5px 0 0;
 }
 
+.card-number-ratings {
+  text-align: end;
+}
+
 /* Big card */
 
 .card-big {
-  width: 700px;
-  height: 460px;
-  /* padding: 40px; */
+  width: calc(700px - 80px);
+  height: calc(460px - 80px);
+  padding: 40px;
 
   display: flex;
   flex-direction: column;
@@ -64,39 +68,12 @@
   font-size: 2rem;
 }
 
-@media screen and (max-width: 500px) {
-  .card-big {
-    width: 294px !important;
-    height: 350px !important;
-    /* padding: 20px !important; */
-  }
-
-  .container-big {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .container-rating-big {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
-
-  .card-title-big {
-    font-size: 1rem !important;
-  }
-
-  .card-info-big {
-    display: none;
-  }
-}
-
 /* Small card */
 
 .card-small {
-  width: 294px;
-  height: 350px;
-  /* padding: 20px; */
+  width: calc(294px - 40px);
+  height: calc(350px - 40px);
+  padding: 20px;
 
   display: flex;
   flex-direction: column;
@@ -118,6 +95,7 @@
 .container-rating-small {
   display: flex;
   justify-content: space-between;
+  font-size: 1rem;
   width: 100%;
 }
 
@@ -125,11 +103,41 @@
   font-size: 1.35rem;
 }
 
-@media screen and (max-width: 500px) {
+.card-rating-small img {
+  max-width: 20px;
+}
+
+@media screen and (max-width: 320px) {
+  .card-big {
+    width: calc(294px - 40px) !important;
+    height: calc(350px - 40px) !important;
+    padding: 20px !important;
+  }
+
+  .container-big {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .container-rating-big {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1rem;
+    width: 100%;
+  }
+
+  .card-title-big {
+    font-size: 1.2rem !important;
+  }
+
+  .card-info-big {
+    display: none;
+  }
+
   .card-small {
-    width: 145px !important;
-    height: 174px !important;
-    /* padding: 10px !important; */
+    width: calc(145px - 20px) !important;
+    height: calc(174px - 20px) !important;
+    padding: 10px !important;
   }
 
   .card-title-small {
@@ -143,4 +151,14 @@
   .card-number-ratings-small {
     display: none;
   }
+}
+
+.show-overview-button {
+  text-decoration: underline;
+  background-color: transparent !important;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  color: #ff5656;
 }
