--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -7,6 +7,14 @@
   border: none;
   cursor: pointer;
   margin: 0 1vw;
+  box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.25);
+  transition: 0.3s;
+  background-color: #ffffff;
+}
+
+.button-component:hover {
+  box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.5);
+  transition: 0.3s;
 }
 
 .button-component:focus {
