--- a/src/components/MyModal/MyModal.css
+++ b/src/components/MyModal/MyModal.css
@@ -10,6 +10,13 @@
   outline: none;
   border: none;
   cursor: pointer;
+  transition: 0.3s;
+  background-color: #ffffff;
+}
+
+.close-modal-button:hover {
+  box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.25);
+  transition: 0.3s;
 }
 
 .modal-header {
@@ -71,6 +78,7 @@
   border-radius: 15px;
   outline: none;
   padding: 0;
+  box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.25);
 }
 
 .Overlay {
