--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 .buttons {
   display: flex;
   align-items: center;
-  margin: 20px 0;
+  padding: 20px 0;
   overflow-x: hidden;
 }
 
@@ -14,6 +14,6 @@
 
 @media screen and (min-width: 321px) {
   .buttons {
-    margin: 50px 0;
+    padding: 50px 0;
   }
 }
